# requirecpp

./: CMakeLists.txt  DependencyReactor.hpp  LICENSE  README.md  closure_traits.hpp  decorators.hpp  function.hpp  main.cpp  requirecpp.hpp  requirecpp2.hpp  requirecpp_dirty.hpp  testcase1.cpp  testcase2.cpp  testcase3.cpp  testcase4.cpp  testcases.h
examples/: CMakeLists.txt  car-assembly-states.cpp  chicken-egg-aware.cpp  chicken-egg-unaware.cpp
include/requirecpp/: decorators.hpp  requirecpp.hpp
include/requirecpp/details/: callback.hpp  closure_traits.hpp  pretty_type.hpp  requirecpp.ipp  trackable_object.hpp  type_lookup.hpp
tests/: CMakeLists.txt  basics.cpp  destruction.cpp  qualifiers.cpp  states.cpp  thread-blocking-require.cpp
